tests/ui/delegation/self-ty-ice-156388.stderr
error[E0277]: the trait bound `Self: [const] Default` is not satisfied
  --> $DIR/self-ty-ice-156388.rs:6:16
   |
LL | reuse Default::default;
   |                ^^^^^^^
   |
help: consider restricting type parameter `Self` with trait `Default`
   |
LL | reuse Default::default [const] std::default::Default;
   |                        +++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
